@@ -1,4 +1,4 @@
-# Copyright (C) 1998-2008 by the Free Software Foundation, Inc.
+# Copyright (C) 1998-2009 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -940,7 +940,10 @@ def membership_options(mlist, subcat, cgidata, doc, form):
     if bucket:
         cells = []
         for letter in keys:
-            url = adminurl + '/members?letter=%s' % letter
+            findfrag = ''
+            if regexp:
+                findfrag = '&findmember=' + urllib.quote(regexp)
+            url = adminurl + '/members?letter=' + letter + findfrag
             if letter == bucket:
                 show = Bold('[%s]' % letter.upper()).Format()
             else:
